customGO.css
/* ... */
@media screen and (max-width: 768px) {
    .sidebar-custom {
        padding: 0 15px;
    }
}

.content-area-custom {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    -ms-flex-order: 1;
    order: 1;
}

@media screen and (max-width: 936px) {
    .content-area-custom {
        padding: 0 15px;
    }
}

@media screen and (min-width: 769px) {
    .content-area-custom {
        -ms-flex: 0 0 75%;
        flex: 0 0 75%;
        max-width: 75%;
        -ms-flex-order: 2;
        order: 2;
    }
}

@media screen and (max-width: 768px) {
    .content-area-custom {
        margin-bottom: 30px;
    }
}

@media screen and (max-width: 1024px) and (min-width: 769px) {
    .content-area-custom .breadcrumb {
        width: 100%;
    }
}

.content-area-custom ol.firstLevelOl {
    padding-left: 0px !important;
}

.content-area-custom li.firstLevelLi {
    display: -ms-inline-flexbox;
    display: inline-flex;
    margin-left: 0px;
	width: 100%;
}

.content-area-custom div.topic li.li div.p {
    margin-bottom: 0px;
}

.content-area-custom ol {
    list-style: decimal;
}

.content-area-custom ol li {
    padding-left: 0px;
}

.content-area-custom ol li > div {
    display: inline-grid;
    /* inline-grid */
    display: -moz-grid-line;
    display: -webkit-inline-grid;
	/* Fix for the Note Heading merge issue in Edge
    display: -ms-inline-grid; */
    vertical-align: top;
    max-width: 100%;
}

.content-area-custom ol li ol.ol {
    list-style: lower-alpha;
    margin-left: 0px;
    padding-left: 0px;
}

.content-area-custom ol li .note ol.ol {
    list-style: decimal !important;

}

.content-area-custom ol li ol.ol li {
    padding-left: 6px;
    margin-left: 22px;
}

.content-area-custom ol li ol.ol li div {
    display: inline-grid;
    /* inline-grid */
    display: -moz-grid-line;
    display: -webkit-inline-grid;
    /* Fix for the Note Heading merge issue in Edge display: -ms-inline-grid; */
    vertical-align: top;
}

.content-area-custom ol li ol.ol li ol.ol {
    counter-reset: list;
    -webkit-padding-start: 0px;
            padding-inline-start: 0px;
    margin-left: 2px;
}

.content-area-custom ol li ol.ol li ol.ol li {
    list-style: none;
    padding-left: 0px;
    margin-left: 0px;
}

.content-area-custom ol li ol.ol li ol.ol li:before {
    content: "(" counter(list, decimal) ") ";
    counter-increment: list;
    float: left;
    margin-right: 0px;
}

.content-area-custom ol li ol.ol li ol.ol li > div {
    display: block !important;
    padding-left: 30px !important;
}

.content-area-custom ol li ol.ol li ol.ol li > div > div {
    display: block !important;
}

.content-area-custom ol li ol.ol li ol.ol li ol.ol {
    counter-reset: list;
}

.content-area-custom ol li ol.ol li ol.ol li ol.ol li {
    list-style: none;
    padding-left: 0;
}

.content-area-custom ol li ol.ol li ol.ol li ol.ol li:before {
    content: "(" counter(list, lower-alpha) ") ";
    counter-increment: list;
    float: left;
    margin-right: 4px;
}

.content-area-custom ol li ol.ol li ol.ol li ol.ol li > div {
    display: block !important;
}

.content-area-custom ol li ol.ol li ol.ol li ol.ol li > div > div {
    display: block !important;
}

/*
 OOTB
*/
li.firstLevelLi {
    display: -ms-inline-flexbox;
    display: inline-flex;
}

li.firstLevelLi::before {
    counter-increment: my-counter;
    content: attr(data-listnumber) "." counter(my-counter) "\2004";
    list-style-type: none !important;
    font-weight: bold;
}

@supports (-ms-ime-align: auto){

li.firstLevelLi::before {
    margin-right: 5px;
}

}

ol.firstLevelOl {
    list-style: none !important;
}

.collapsible-menu {
    border: solid 1px #bfbfbf;
    border-top: solid 5px #000000;
}

.collapsible-menu ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.collapsible-menu ul li a {
    padding: 10px 30px;
    display: block;
    width: 100%;
    font-size: 17px;
    line-height: 24px;
    position: relative;
    color: #db2032;
}

.collapsible-menu ul li a:hover {
    text-decoration: none;
    color: #db2032;
}

.collapsible-menu ul li.link a:after {
    content: ' ';
    border: solid #db2032;
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 4px;
    transform: rotate(-45deg);
    right: 25px;
    top: 50%;
    margin-top: -7px;
    position: absolute;
}

.collapsible-menu ul li.collapsible a {
    /* Vertical line */
    /* horizontal line */
}

.collapsible-menu ul li.collapsible a:before, .collapsible-menu ul li.collapsible a:after {
    content: "";
    position: absolute;
    background-color: #db2032;
}

.collapsible-menu ul li.collapsible a:before {
    top: 14px;
    right: 27px;
    width: 2px;
    height: 14px;
    margin-left: -2px;
}

.collapsible-menu ul li.collapsible a:after {
    top: 22px;
    right: 21px;
    width: 14px;
    height: 2px;
    margin-top: -2px;
}

.collapsible-menu ul li ul {
    display: none;
}

.collapsible-menu ul li.collapsible.open > a {
    background-color: #343434;
    color: #ffffff;
}

.collapsible-menu ul li.collapsible.open > a:before, .collapsible-menu ul li.collapsible.open > a:after {
    background-color: #ffffff;
}

.collapsible-menu ul li.collapsible.open > a::before {
    display: none;
}

.collapsible-menu ul li.collapsible.open ul {
    background-color: #edecec;
    display: block;
}

.collapsible-menu ul li.collapsible.open ul li a {
    color: #242424;
}

.collapsible-menu ul li.collapsible.open ul li a:before, .collapsible-menu ul li.collapsible.open ul li a:after {
    display: none;
}

.collapsible-menu ul li.collapsible.open ul li:last-child {
    border-bottom: 1px solid #bfbfbf;
}

.contact-link {
    display: inline-block;
    font-size: 16px;
}

.contact-link h4 {
    color: #000000;
    font-size: 17px;
    line-height: 24px;
    font-weight: bold;
}

.contact-link a:hover {
    color: #db2032;
}

.contact-link * {
    color: #db2032;
}

.contact-link .material-icons {
    font-size: 22px;
}
/* ... */

